<resources>
    <string name="app_name" translatable="false">InterstellarEnemies</string>
    <string name="forgot" translatable="false"><u>Reset</u></string>
    <string name="sign_up" translatable="false"><u>Sign up</u></string>
    <string name="toast_pass_reset" translatable="false">Password reset link sent your email address</string>
    <string name="toast_email_NF" translatable="false">Email address not found.</string>
    <string name="toast_pass_NM" translatable="false">Passwords does not match!</string>
    <string name="toast_wrong_pass_or_email" translatable="false">
        Your email or password is incorrect
    </string>
    <string name="login_or_sign_up">
        Login or\nSign up with
    </string>
    <string name="no_account_yet">No account yet?</string>
    <string name="interstellar_enemies">Interstellar Enemies</string>
    <string name="e_mail">E-mail</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="shhh">Shhh!</string>
    <string name="password_again">Password Again</string>
    <string name="sign_up_">Sign Up</string>
    <string name="reset_password">Reset Password</string>
    <string name="send_code">Send Code</string>
    <string name="single_player">Single Player</string>
    <string name="join_a_planet">Join a Planet</string>
    <string name="create_a_planet">Create a Planet</string>
    <string name="walkthrough">Walkthrough</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="announcements">Announcements</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="change_username">Change Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leaderboard_top_5">LEADERBOARD TOP 5</string>
    <string name="score">score</string>
    <string name="settingsText">SETTINGS</string>
    <string name="money">1.000.000</string>
    <string name="hangarUnderlined"><u>HANGAR</u></string>
    <string name="hangar">HANGAR</string>
    <string name="userName">Kheseyroon</string>
    <string name="usernameText">Username:</string>
    <string name="userID">1111111</string>
    <string name="userid">UserID:</string>
    <string name="planet">Kepler</string>
    <string name="planetText">Planet:</string>
    <string name="rank">Silver</string>
    <string name="rankText">Rank:</string>
    <string name="shipCount">2</string>
    <string name="shipsText">Ships:</string>
    <string name="enter_userid">Enter UserID</string>
    <string name="add_friend">ADD FRIEND</string>
    <string name="friends">FRIENDS</string>
    <string name="invites">INVITES</string>
    <string name="first">1. First</string>
    <string name="second">2. Second</string>
    <string name="third">3. Third</string>
    <string name="fourth">4. Fourth</string>
    <string name="fifth">5. Fifth</string>
    <string name="shopUpperCase">SHOP</string>


</resources>
