<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_gamepad"
            android:title="@string/home"/>

        <item

            android:id="@+id/nav_shop"
            android:icon="@drawable/ic_shop"
            android:title="@string/shop" />

        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@drawable/ic_scoreboard"
            android:title="@string/leaderboard" />

        <item
            android:id="@+id/nav_announcements"
            android:icon="@drawable/ic_announcements"
            android:title="@string/announcements" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_chat"
            android:title="@string/messages" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>


</menu>