<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2D2A2E"
    tools:context=".RegisterPage">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="316dp"
        android:layout_height="156dp"
        android:layout_marginTop="40dp"
        android:background="#00000000"
        android:fontFamily="@font/vt323"
        android:text="@string/interstellar_enemies"
        android:textColor="@color/purple"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/RegisterEmail"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:fontFamily="@font/vt323"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="0"
        android:textColor="@color/white.absolute"
        android:textColorHint="@color/green"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/RegisterEmailPass"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="@font/vt323"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white.absolute"
        android:textColorHint="@color/green"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterEmail" />

    <EditText
        android:id="@+id/RegisterEmailPassConfirm"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="@font/vt323"

        android:hint="@string/password_again"
        android:inputType="textPassword"
        android:textColor="@color/white.absolute"
        android:textColorHint="@color/green"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterEmailPass" />

    <Button
        android:id="@+id/signUpBut"
        android:layout_width="143dp"
        android:layout_height="67dp"
        android:fontFamily="@font/vt323"
        android:text="@string/sign_up_"
        android:textSize="30sp"
        app:backgroundTint="@color/purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterEmailPassConfirm"
        app:layout_constraintVertical_bias="0.569" />
</androidx.constraintlayout.widget.ConstraintLayout>