<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".init.ResetPassPage">


    <TextView
        android:id="@+id/resetPassText"
        android:layout_width="305dp"
        android:layout_height="144dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/vt323"
        android:text="@string/reset_password"
        android:textAlignment="center"
        android:textColor="@color/purple"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/resetEmailEdit"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:ems="10"
        android:fontFamily="@font/vt323"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="0"
        android:textColor="@color/white.absolute"
        android:textColorHint="@color/green"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/resetPassBut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetPassText"
        app:layout_constraintVertical_bias="0.51" />

    <Button
        android:id="@+id/resetPassBut"
        android:layout_width="195dp"
        android:layout_height="71dp"
        android:layout_marginBottom="144dp"
        android:fontFamily="@font/vt323"
        android:text="@string/send_code"
        android:textSize="30sp"
        app:backgroundTint="@color/purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>