<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">
    
    
    <TextView
        android:id="@+id/textView"
        android:layout_width="293dp"
        android:layout_height="193dp"
        android:layout_marginTop="40sp"
        android:background="#00000000"
        android:fontFamily="@font/vt323"
        android:text="@string/interstellar_enemies"
        android:textAlignment="viewStart"
        android:textColor="@color/purple"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="229dp"
        android:layout_height="105dp"
        android:layout_marginTop="52dp"
        android:background="#00000000"
        android:fontFamily="@font/vt323"
        android:text="@string/login_or_sign_up"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="62sp"
        android:layout_height="40sp"
        android:layout_marginBottom="44dp"
        android:background="#00000000"
        android:fontFamily="@font/vt323"
        android:text="@string/shhh"
        android:textColor="@color/purple"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/emailView"
        android:layout_width="104dp"
        android:layout_height="98dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/envelope__1_" />

    <ImageView
        android:id="@+id/googleSignImage"
        android:layout_width="103dp"
        android:layout_height="94dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/google_brands" />

</androidx.constraintlayout.widget.ConstraintLayout>